Update app routing

--- a/contracts/templates/contract_list.html
+++ b/contracts/templates/contract_list.html
@@ -17,7 +17,7 @@
             <th scope="col">Fecha de creación</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
           {% for contract in contracts %}
           <tr>
             <td>{{ contract.client.name }}</td>
