--- a/contracts/templates/client_list.html
+++ b/contracts/templates/client_list.html
@@ -14,7 +14,7 @@
             <th scope="col">Nombre</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
           {% for client in clients %}
           <tr>
             <td>{{ client.name }}</td>
