--- a/contracts/templates/report.html
+++ b/contracts/templates/report.html
@@ -23,7 +23,7 @@
             <th scope="col">Costo</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
           {% for result in results %}
           <tr>
             <td>{{ result.client.name }}</td>
